web-infras/parser/tests/fixtures/babel/es2015/uncategorised/289/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,6)
1|({ t(eval) { "use strict"; } });
 |    ^
